# automate-features

./: .env.example  .eslintrc.json  .gitattributes  .gitignore  .npmignore  .npmrc  .pre-commit-hook  .release-it.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT.md  QUICK_START_CLI.md  README.md  arranjae-automate-features-0.1.0.tgz  jest.config.js  optimized-process-core-0.1.0.tgz  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.build.json  tsconfig.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
config/: default-config.json
docs/: AI_PROVIDERS.md  BUNDLE.md  CLAUDE_CODE_SETUP.md  CLAUDE_MODEL_CONFIGURATION.md  CLI_MODE.md  CODE_PARSER.md  CURSOR_API_ISSUE.md  FAQ.md  GEMINI_SDK_VS_REST.md  GITHUB_TOKEN_QUICK.md  GITHUB_TOKEN_SETUP.md  PUBLISHING.md  QUICK_START.md  RUST_CLI.md  SECURITY.md  TEMPLATE_PARSER_SYSTEM.md  TESTING_LOCAL.md  USAGE.md  USAGE_GUIDE.md
examples/: basic-usage.js  github-actions.yml
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: add-to-path.sh  copy-rust-binary.js  copy-source-files.js  postinstall.js  prepare-publish.js  setup-github-token.sh  setup-providers.sh  setup-rust-module.js
src/: index.ts  lib.rs
src/core/: CodeGenerator.ts  CodeParser.ts  CodeReviewer.ts  Pipeline.ts
src/generators/: BranchGenerator.ts  PRGenerator.ts  TaskCreator.ts
src/integrations/: AIProvider.ts  AIProviderFactory.ts  CursorAPI.ts  GitAPI.ts  GitHubAPI.ts  rust-bindings.ts
src/parser/: FileExecutor.ts  index.ts  (+3 more)
test/: api-mode-simple-test.ts  api-mode-test.ts  gemini-test.ts
(+9 files in other folders)
