[package]
name = "automate-features-rust"
version = "0.1.0"
edition = "2021"
authors = ["Arranjaê"]
description = "Rust backend for automate-features CLI execution"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "2.16", default-features = false, features = ["tokio_rt"] }
napi-derive = "2.16"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
ignore = "0.4"

[build-dependencies]
napi-build = "2.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

